fix: fix spacing issue of credit user in global search

--- a/src/sass/variantcss/_searchBarResults.scss
+++ b/src/sass/variantcss/_searchBarResults.scss
@@ -1,7 +1,7 @@
 .search-bar-credit-user{
-  margin-left: 27px;
+  margin-right: 43px;
   font-size: 12px;
-  padding: 5px;
+  padding: 0 5px 5px 5px;
 }
 
 .global-search-loading-panel{
